tests/e2e/pass/v2_struct_init_zero.ep
# EXIT: 9
struct Box {
    n: i64
    missing: i64
}

fun run(): i64 {
    let b = new Box { n: 9 }
    if b.missing == 0 {
        ret b.n
    }
    ret 1
}

fun main(): void {
    exit(run())
}
