tests/e2e/fail/ptr_from_u32.ep
# COMPILE_ERROR: ptr conversion requires i64, u64, array, or product, got u32
fun main(): void {
    let value = ptr(u32(0))
}
